# Sistemas-Avanzados

./: main.rs
Actividad 4/: Cargo.toml  graficas_metricas.py  metrics.jsonl
Actividad 4/MonitorRust/: Instrucciones para ejecutar.txt  crear_tarea.ps1
Actividad 4/html_output/: reporte_completo.html  top_procesos.html
Actividad 4/src/: main.rs
attack_simulator1/: Cargo.toml  log_ataques.csv  log_ataques.json
attack_simulator1/src/: main.rs
