[package]
name = "attack_simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"           # eframe incluye egui para GUI
tokio = { version = "1", features = ["full"] }  # para red y tareas async
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"